# ai-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: release.sh
src/: client.rs  error.rs  lib.rs  message.rs  types.rs
src/mcp/: client.rs  transport.rs  types.rs
src/provider/: google.rs  mod.rs  openai.rs  openai_compat.rs  transform.rs
src/session/: agent.rs  approval.rs  mod.rs
src/skill/: mod.rs  parser.rs
src/stream/: google.rs  handler.rs  mod.rs  sse.rs
src/tool/: builtin.rs  mcp.rs  mod.rs
tests/: agent_loop_test.rs  google_provider.rs  message_test.rs  provider_transform_test.rs  skill_test.rs  stream_test.rs  tool_test.rs  types_test.rs
