[package]
name = "ai-rs"
version = "0.0.4"
edition = "2024"

[dependencies]
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "process",
  "time",
  "io-util",
  "fs",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
eventsource-stream = "0.2"
futures = "0.3"
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
schemars = "1"
globset = "0.4"
ignore = "0.4"
regex = "1"
bytes = "1"
async-stream = "0.3"
